--- a/index.html
+++ b/index.html
@@ -1,427 +1,222 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Trade Journal Book</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trading Journal with Simulation Mode</title>
   <style>
-    /* Basic Styling */
+    /* Base styles */
     body {
-      font-family: 'Inter', sans-serif;
-      padding: 30px;
-      transition: background-color 0.3s, color 0.3s;
-      margin: 0;
-    }
-
-    body.light-mode {
-      background: #f8f8f8;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #f7f7f7;
       color: #333;
     }
 
-    body.dark-mode {
-      background: #121212;
-      color: #eaeaea;
-    }
-
-    h1 {
-      text-align: center;
+    h3 {
       color: #333;
-      font-size: 2rem;
-    }
-
-    .stats {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-      margin-bottom: 40px;
-    }
-
-    .stat-card {
-      background: #fff;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       text-align: center;
     }
 
-    .stat-card.dark-mode {
-      background: #333;
-      color: #fff;
-    }
-
-    .charts {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 30px;
-    }
-
-    canvas {
-      width: 100%;
-      max-width: 400px;
-      height: 300px;
-    }
-
-    .trade-list {
-      margin-top: 30px;
-    }
-
-    .trade-card {
-      background: #fff;
-      padding: 15px;
-      border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    .simulation-toggle,
+    .buttons-container {
       margin-bottom: 20px;
     }
 
-    .trade-card.dark-mode {
-      background: #333;
-      color: #fff;
-    }
-
-    .delete-btn {
-      background: red;
-      color: #fff;
-      border: none;
-      padding: 5px 10px;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-
-    .delete-btn:hover {
-      background: darkred;
-    }
-
-    .toggle-container {
-      display: flex;
-      justify-content: flex-end;
+    .simulation-indicator {
+      font-weight: bold;
+      color: #555;
+      text-align: center;
       margin-bottom: 20px;
     }
 
-    .toggle-btn {
-      background: #4CAF50;
-      color: white;
+    .backup-section {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    button {
       padding: 10px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-      border: none;
-    }
-
-    .toggle-btn.dark-mode {
-      background: #333;
-    }
-
-    .tags-container {
-      margin-top: 10px;
-    }
-
-    .tag {
-      display: inline-block;
       background-color: #4CAF50;
       color: white;
-      padding: 5px 10px;
-      margin-right: 5px;
+      border: none;
       border-radius: 5px;
-    }
-
-    /* Modal Styling */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0, 0, 0, 0.4);
-    }
-
-    .modal-content {
-      background-color: #fefefe;
-      margin: 15% auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 80%;
-      max-width: 600px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
-
-    .close:hover,
-    .close:focus {
-      color: black;
-      text-decoration: none;
       cursor: pointer;
+      font-size: 16px;
+      margin: 5px;
     }
 
-    /* Responsive Design */
-    @media (max-width: 768px) {
-      .stats {
-        grid-template-columns: 1fr 1fr;
+    button:hover {
+      background-color: #45a049;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px;
+    }
+
+    th, td {
+      padding: 10px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    /* Mobile responsiveness */
+    @media screen and (max-width: 768px) {
+      body {
+        padding: 10px;
       }
 
-      .charts {
+      table th, table td {
+        padding: 8px;
+        font-size: 14px;
+      }
+
+      button {
+        font-size: 14px;
+        padding: 8px 15px;
+      }
+
+      .simulation-toggle,
+      .buttons-container {
+        display: flex;
         flex-direction: column;
         align-items: center;
       }
 
-      canvas {
-        max-width: 100%;
-      }
-
-      .trade-card {
+      .simulation-indicator {
+        font-size: 14px;
         margin-bottom: 15px;
-        padding: 10px;
       }
 
-      .trade-list {
-        margin-top: 20px;
+      h3 {
+        font-size: 18px;
       }
 
-      h1 {
-        font-size: 1.5rem;
-      }
-
-      .toggle-container {
-        justify-content: center;
-      }
-
-      .toggle-btn {
+      /* Adjust table layout */
+      table {
         width: 100%;
-        padding: 15px;
-      }
-
-      #tradeForm input, #tradeForm select, #tradeForm textarea, #tradeForm button {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        box-sizing: border-box;
+        overflow-x: auto;
+        display: block;
+        white-space: nowrap;
       }
     }
 
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 1.2rem;
+    @media screen and (max-width: 480px) {
+      .buttons-container button {
+        width: 100%;
+        margin: 5px 0;
       }
 
-      .stats {
-        grid-template-columns: 1fr;
-      }
-
-      .stat-card {
-        padding: 10px;
-      }
-
-      .tags-container {
-        font-size: 0.9rem;
-      }
-
-      .tag {
-        font-size: 0.8rem;
-        padding: 3px 8px;
-      }
-
-      .toggle-btn {
-        padding: 12px;
+      .simulation-toggle {
+        text-align: center;
       }
     }
   </style>
 </head>
-<body class="light-mode">
-  <!-- Dark Mode Toggle Button -->
-  <div class="toggle-container">
-    <button class="toggle-btn" onclick="toggleDarkMode()">Switch to Dark Mode</button>
+<body>
+
+  <!-- Simulation Mode Toggle -->
+  <div class="simulation-toggle">
+    <label for="simulationMode">Simulation Mode:</label>
+    <input type="checkbox" id="simulationMode" onchange="toggleSimulationMode()">
   </div>
 
-  <h1>📒 Trade Journal Book</h1>
-
-  <!-- Stats Section -->
-  <div class="stats">
-    <div class="stat-card">
-      <strong>Total Trades</strong>
-      <div id="totalTrades">0</div>
-    </div>
-    <div class="stat-card">
-      <strong>Win/Loss Ratio</strong>
-      <div id="winLossRatio">0%</div>
-    </div>
-    <div class="stat-card">
-      <strong>Profit/Loss</strong>
-      <div id="profitLoss">$0</div>
-    </div>
-    <div class="stat-card">
-      <strong>Most Traded Instrument</strong>
-      <div id="mostTradedInstrument">N/A</div>
-    </div>
-    <div class="stat-card">
-      <strong>Avg Position Size</strong>
-      <div id="avgPositionSize">0</div>
-    </div>
+  <!-- Simulation Mode Indicator -->
+  <div id="simulationIndicator" class="simulation-indicator">
+    Simulation Mode: Inactive (Trades will be saved permanently)
   </div>
 
-  <!-- Charts Section -->
-  <div class="charts">
-    <canvas id="winLossChart"></canvas>
-    <canvas id="assetTypeChart"></canvas>
+  <!-- Buttons for Simulated Trades -->
+  <div class="buttons-container">
+    <button onclick="simulateTrade()">Simulate a Trade</button>
+    <button onclick="resetSimulatedTrades()">Reset Simulation Trades</button>
   </div>
 
-  <!-- Form for adding trades -->
-  <form id="tradeForm">
-    <input type="datetime-local" id="datetime" required />
-    <select id="assetType" required>
-      <option value="forex">Forex</option>
-      <option value="crypto">Crypto</option>
-      <option value="stock">Stock</option>
-      <option value="commodity">Commodity</option>
-    </select>
-    <input type="text" id="instrument" placeholder="Instrument" required />
-    <input type="text" id="setup" placeholder="Setup Type (Technical/Fundamental)" required />
-    <input type="text" id="entryExit" placeholder="Entry/Exit Points" required />
-    <input type="number" id="size" placeholder="Position Size" required />
-    <input type="number" id="stopTarget" placeholder="Stop Loss & Target" required />
-    <input type="text" id="reason" placeholder="Reason for Trade" required />
-    <input type="text" id="emotion" placeholder="Emotion Before/During/After" required />
-    <textarea id="analysis" placeholder="Post-Trade Analysis"></textarea>
-
-    <!-- Tags Section -->
-    <div class="tags-container">
-      <label for="tags">Tags (comma-separated): </label>
-      <input type="text" id="tags" placeholder="e.g., Long, Scalping" />
-    </div>
-
-    <button type="submit">Add Trade</button>
-  </form>
-
-  <!-- Display List of Trades -->
-  <div class="trade-list" id="tradeList"></div>
-
-  <!-- Tips Section -->
-  <div id="tradeTips" class="trade-tips">
-    <button onclick="openTipsModal()">Trade Recording Tips</button>
-  </div>
-
-  <!-- Modal for Tips -->
-  <div id="tipsModal" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="closeTipsModal()">&times;</span>
-      <h2>How to Effectively Record Your Trades:</h2>
-      <ul>
-        <li><strong>Track your emotions:</strong> It helps to know how psychological factors affect your trades.</li>
-        <li><strong>Record your trading setup in detail:</strong> Identify patterns in setups for more successful trades.</li>
-        <li><strong>Include your entry and exit points:</strong> Understand your strategy and outcomes better.</li>
-        <li><strong>Set goals for each trade:</strong> Keep track of your targets to stay focused on your objectives.</li>
-        <li><strong>Review and analyze past trades:</strong> Continuous learning from your mistakes is key to improvement.</li>
-      </ul>
-    </div>
-  </div>
+  <!-- Simulated Trades Display Table -->
+  <h3>Simulated Trades</h3>
+  <table id="simulatedTradesTable">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Instrument</th>
+        <th>Entry</th>
+        <th>Exit</th>
+        <th>Position Size</th>
+      </tr>
+    </thead>
+    <tbody id="simulatedTradesBody">
+      <!-- Simulated trades will be inserted here -->
+    </tbody>
+  </table>
 
   <script>
-    // Modal handling
-    const modal = document.getElementById("tipsModal");
-    const tradeTipsButton = document.getElementById("tradeTips");
+    let isSimulationMode = false;
+    let simulatedTrades = [];
 
-    function openTipsModal() {
-      modal.style.display = "block";
+    // Toggle Simulation Mode
+    function toggleSimulationMode() {
+      isSimulationMode = document.getElementById('simulationMode').checked;
+      updateSimulationIndicator();
     }
 
-    function closeTipsModal() {
-      modal.style.display = "none";
-    }
-
-    window.onclick = function(event) {
-      if (event.target === modal) {
-        closeTipsModal();
-      }
-    }
-
-    // Initial Trade Data
-    let trades = JSON.parse(localStorage.getItem('trades')) || [];
-
-    // DOM elements for stats
-    const totalTrades = document.getElementById('totalTrades');
-    const winLossRatio = document.getElementById('winLossRatio');
-    const profitLoss = document.getElementById('profitLoss');
-    const mostTradedInstrument = document.getElementById('mostTradedInstrument');
-    const avgPositionSize = document.getElementById('avgPositionSize');
-
-    // Dark Mode Toggle
-    const toggleBtn = document.querySelector('.toggle-btn');
-    const body = document.body;
-
-    // Check saved dark mode preference
-    if (localStorage.getItem('theme') === 'dark') {
-      body.classList.add('dark-mode');
-      body.classList.remove('light-mode');
-      toggleBtn.textContent = 'Switch to Light Mode';
-      toggleBtn.classList.add('dark-mode');
-    }
-
-    // Toggle dark mode
-    function toggleDarkMode() {
-      if (body.classList.contains('light-mode')) {
-        body.classList.remove('light-mode');
-        body.classList.add('dark-mode');
-        toggleBtn.textContent = 'Switch to Light Mode';
-        toggleBtn.classList.add('dark-mode');
-        localStorage.setItem('theme', 'dark');
+    // Update the indicator
+    function updateSimulationIndicator() {
+      const indicator = document.getElementById('simulationIndicator');
+      if (isSimulationMode) {
+        indicator.textContent = "Simulation Mode: Active (Trades not saved permanently)";
       } else {
-        body.classList.remove('dark-mode');
-        body.classList.add('light-mode');
-        toggleBtn.textContent = 'Switch to Dark Mode';
-        toggleBtn.classList.remove('dark-mode');
-        localStorage.setItem('theme', 'light');
+        indicator.textContent = "Regular Mode: Trades will be saved permanently";
       }
     }
 
-    // Form submission handler
-    document.getElementById('tradeForm').addEventListener('submit', (e) => {
-      e.preventDefault();
-      
-      const newTrade = {
-        datetime: document.getElementById('datetime').value,
-        assetType: document.getElementById('assetType').value,
-        instrument: document.getElementById('instrument').value,
-        setup: document.getElementById('setup').value,
-        entryExit: document.getElementById('entryExit').value,
-        size: parseFloat(document.getElementById('size').value),
-        stopTarget: document.getElementById('stopTarget').value,
-        reason: document.getElementById('reason').value,
-        emotion: document.getElementById('emotion').value,
-        analysis: document.getElementById('analysis').value,
-        tags: document.getElementById('tags').value.split(',').map(tag => tag.trim()) // Handle tags input
+    // Add simulated trade
+    function addTrade(trade) {
+      if (isSimulationMode) {
+        simulatedTrades.push(trade);
+        displaySimulatedTrades();
+      }
+      else {
+        // Save to permanent trades (for real trades)
+        console.log("Trade added to permanent journal:", trade);
+      }
+    }
+
+    // Simulate Trade
+    function simulateTrade() {
+      const simulatedTrade = {
+        date: new Date(),
+        instrument: "EUR/USD",
+        entryPoint: "1.1800",
+        exitPoint: "1.1850",
+        positionSize: "1.0",
       };
+      addTrade(simulatedTrade);
+    }
 
-      trades.push(newTrade);
-      localStorage.setItem('trades', JSON.stringify(trades));
-      displayTrades();
-      updateStatsAndCharts();
-      e.target.reset();
-    });
+    // Display Simulated Trades
+    function displaySimulatedTrades() {
+      const tableBody = document.getElementById('simulatedTradesBody');
+      tableBody.innerHTML = '';
+      simulatedTrades.forEach(trade => {
+        const row = document.createElement('tr');
+        row.innerHTML = `
+          <td>${trade.date}</td>
+          <td>${trade.instrument}</td>
+          <td>${trade.entryPoint}</td>
+          <td>${trade.exitPoint}</td>
+          <td>${trade.positionSize}</td>
+        `;
+        tableBody.appendChild(row);
+      });
+    }
 
-    // Display all trades in the trade list
-    function displayTrades() {
-      const tradeList = document.getElementById('tradeList');
-      tradeList.innerHTML = '';
-      trades.forEach((trade, index) => {
-        const card = document.createElement('div');
-        card.className = 'trade-card';
-        card.innerHTML = `
-          <h3>${trade.instrument} (${trade.assetType.toUpperCase()})</h3>
-          <p><strong>Date:</strong> ${trade.datetime}</p>
-          <p><strong>Setup:</strong> ${trade.setup}</p>
-          <p><strong>Entry/Exit:</strong> ${trade.entryExit}</p>
-          <p><strong>Size:</strong> ${trade.size}</p>
-          <p><strong>Stop/Target:</strong> ${trade.stopTarget}</p>
-          <p><strong>Reason:</strong> ${trade.reason}</p>
-          <p><strong>Emotion:</strong> ${trade.emotion}</p>
-          <p><strong>Analysis:</strong> ${trade.analysis}</p>
-          <p><strong>Tags:</strong> ${trade.tags.map(tag => `<span class="tag">${tag}</span>`).join(' ')}</p>
-          <button class="delete-btn" onclick="
+    // Reset simulated trades
+    function resetSimulatedTrades() {
+      simulatedTrades = [];
+      displaySimulatedTrades();
+    }
+  </script>
+</body>
+</html>
